<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layoutDirection="rtl"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_marginVertical="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose"
android:fontFamily="casual"        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/choos"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chem"
            android:text="@string/chemistry"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geographic"
            android:id="@+id/geo"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport"
            android:id="@+id/sport"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layoutDirection="rtl">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="50dp">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioClicked"
                android:text="Male"></RadioButton>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioClicked"
                android:text="Female" />
        </RadioGroup>

        <TextView
            android:layout_marginTop="25dp"
            android:id="@+id/cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
    </LinearLayout>


    <EditText

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_marginTop="30dp"
        android:hint="Name ..."
        />


    <Button
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="START"
      />


</LinearLayout>