<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz"
    android:orientation="vertical"
    android:layoutDirection="rtl"
   android:layout_margin="15dp"
    android:weightSum="7"
   >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:weightSum="3"
        >

        <ImageView
            android:id="@+id/img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="#aaaaaa"
            android:layout_weight="1"

            />


        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@id/name"
android:textSize="30dp"

            android:background="#999999"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:weightSum="3"
        >

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:background="#999999"
            android:text="0"
            android:textSize="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="70dp">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t_q"
            android:textSize="25dp"
            android:text=""
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fals_b"
                android:id="@+id/b_f"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_b"
                android:id="@+id/b_t"/>

        </LinearLayout>

        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:layout_marginTop="30dp"/>
        <Button
            android:id="@+id/cheating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cheating"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</LinearLayout>